[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "wtforms>=3.2.1",
    "aiohttp>=3.12.14",
    "pytz>=2025.2",
    "pillow>=11.3.0",
    "qrcode>=8.2",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]
